feat(security): Phase 2.3 KnowledgeCapability + Role restrictions + filter wiring
Implements the knowledge-scoped capability model described in ADR-008
and the Phase 2.3 roadmap items that were still unchecked.

New surface:
- KnowledgeCapability enum — QUERY / CREATE / MANAGE / ADMIN, hierarchical
  (ADMIN implies everything; CREATE implies QUERY; etc.)
- KnowledgeRestrictions record — per-Role JSONB shape with allowedDomains,
  allowedTypes, deniedTypes, maxDepth, allowDrafts. Optional; missing/empty
  is 'no restrictions beyond capability'.
- KnowledgeCapabilityResolver — looks up the actor's Role, walks the
  capabilities JSON for entries with entityType=knowledge, picks the
  highest matching KnowledgeCapability. Parses knowledgeRestrictions
  JSONB. Accepts both 'QUERY' and 'KNOWLEDGE_QUERY' operation strings.
- Role entity gains knowledgeRestrictions JSONB column (V7 migration).
- KnowledgePerspectiveFilter — was previously a stub with a hardcoded
  AccessPolicy defaulting to 'no restrictions'. Now resolves the policy
  through the resolver and enforces it: filters list/search results,
  hides getById/getByFQN when not visible (returns 404 to avoid leaking
  existence), caps graph traversal depth against restrictions.maxDepth.
- KnowledgeArticleResource — every read endpoint (list, getById,
  getByFQN, search, graph/traverse) resolves the caller's AccessPolicy
  from X-Agent-Role / X-Agent-Id / X-User headers and applies the
  filter. Headers missing or unknown → 'system' actor → default
  no-restriction policy (preserves existing behaviour for un-attributed
  calls).

Why a 404 for hidden getById/FQN rather than 403: returning 403 would
tell the caller 'this resource exists but you can't see it'. 404
collapses both cases ('not found' and 'not visible to you'), which is
the safer default for permissioned resources.

25 new tests across 3 classes:
- KnowledgeCapabilityTest — hierarchy semantics
- KnowledgeCapabilityResolverTest — JSON parsing + edge cases
- Kn